Styling improvements. Added code for encrypting DB in Android version before API 23. Fixed going to alt. phone verification after password fails three times. Added better consent wording, links, and checkbox.

--- a/app/res/layout/screen_connect_password.xml
+++ b/app/res/layout/screen_connect_password.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
     android:background="@color/cc_core_bg"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_marginStart="@dimen/content_start"
+    android:layout_marginEnd="@dimen/content_start">
 
     <TextView
         android:id="@+id/connect_password_title"
@@ -13,7 +15,7 @@
         android:layout_margin="@dimen/content_min_margin"
         android:textColor="@color/cc_neutral_color"
         android:textSize="@dimen/text_largest"
-        android:text="@string/connect_password_title"/>
+        android:text="@string/connect_password_title" />
 
     <TextView
         android:id="@+id/connect_password_message"
@@ -29,14 +31,14 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
-        android:text="@string/connect_password"/>
+        android:hint="@string/connect_password"/>
 
     <AutoCompleteTextView
         android:id="@+id/connect_password_repeat_input"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
-        android:text="@string/connect_password_repeat"/>
+        android:hint="@string/connect_password_repeat"/>
 
     <TextView
         android:id="@+id/connect_password_error_message"
