--- a/app/res/layout/screen_connect_recovery_decision.xml
+++ b/app/res/layout/screen_connect_recovery_decision.xml
@@ -3,13 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
     android:background="@color/cc_core_bg"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_marginStart="@dimen/content_start"
+    android:layout_marginEnd="@dimen/content_start">
 
     <TextView
         android:id="@+id/connect_recovery_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="start"
         android:layout_margin="@dimen/content_min_margin"
         android:textColor="@color/cc_neutral_color"
         android:textSize="@dimen/text_largest"
@@ -57,7 +59,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="@dimen/content_start"
-        android:paddingTop="@dimen/content_start"/>
+        android:paddingTop="@dimen/content_start" />
 
     <TextView
         android:id="@+id/connect_recovery_or"
@@ -73,6 +75,6 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="@dimen/content_start"
-        android:paddingTop="@dimen/content_start" />
+        android:paddingTop="@dimen/content_start"/>
 
 </LinearLayout>
