--- a/app/res/layout/screen_connect_password_verify.xml
+++ b/app/res/layout/screen_connect_password_verify.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
     android:background="@color/cc_core_bg"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_marginStart="@dimen/content_start"
+    android:layout_marginEnd="@dimen/content_start">
 
     <TextView
         android:id="@+id/connect_password_verify_title"
@@ -12,7 +14,7 @@
         android:layout_gravity="center"
         android:layout_margin="@dimen/content_min_margin"
         android:textColor="@color/cc_neutral_color"
-        android:textSize="@dimen/text_largest"
+        android:textSize="@dimen/text_larger"
         android:text="@string/connect_password_verify_title"/>
 
     <TextView
@@ -29,7 +31,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
-        android:text="@string/connect_password_verify"/>
+        android:hint="@string/connect_password_verify"/>
 
     <TextView
         android:id="@+id/connect_password_verify_forgot"
