--- a/app/res/layout/screen_connect_registration.xml
+++ b/app/res/layout/screen_connect_registration.xml
@@ -72,6 +72,15 @@
             android:inputType="numberDecimal" />
     </RelativeLayout>
 
+    <TextView
+        android:id="@+id/connect_registration_error"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/content_min_margin"
+        android:gravity="start"
+        android:textSize="@dimen/text_medium"
+        android:visibility="gone"/>
+
     <Button
         android:id="@+id/connect_register_button"
         android:layout_width="fill_parent"
