Showing ConnectID page titles in blue bar at top of screen. Storing alt number in Connect DB. Not allowing user to change primary number to match alt number. Fixed bugs involving forgetting ConnectID user and saved app credentials.

--- a/app/res/layout/screen_connect_password_verify.xml
+++ b/app/res/layout/screen_connect_password_verify.xml
@@ -11,7 +11,7 @@
         android:id="@+id/connect_password_verify_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="start"
         android:layout_margin="@dimen/content_min_margin"
         android:textColor="@color/cc_neutral_color"
         android:textSize="@dimen/text_larger"
