--- a/app/res/layout/screen_connect_recovery_decision.xml
+++ b/app/res/layout/screen_connect_recovery_decision.xml
@@ -8,22 +8,12 @@
     android:layout_marginEnd="@dimen/content_start">
 
     <TextView
-        android:id="@+id/connect_recovery_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:layout_margin="@dimen/content_min_margin"
-        android:textColor="@color/cc_neutral_color"
-        android:textSize="@dimen/text_largest"
-        android:text="@string/connect_recovery_title"/>
-
-    <TextView
         android:id="@+id/connect_recovery_message"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/content_min_margin"
         android:gravity="start"
-        android:textSize="@dimen/text_medium"/>
+        android:textSize="@dimen/text_large"/>
 
     <RelativeLayout
         android:id="@+id/connect_recovery_phone_block"
