--- a/app/res/layout/custom_alert_dialog.xml
+++ b/app/res/layout/custom_alert_dialog.xml
@@ -50,6 +50,17 @@
                     android:textColor="@color/cc_attention_negative_text"
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
 
+                <CheckBox
+                    android:id="@+id/dialog_checkbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/emphasized_message"
+                    android:focusable="true"
+                    android:visibility="gone"
+                    android:textSize="@dimen/font_size_dp_large"
+                    android:layout_marginTop="@dimen/standard_spacer_double">
+                </CheckBox>
+
             </RelativeLayout>
 
         </ScrollView>
