--- a/app/res/layout/screen_connect_password.xml
+++ b/app/res/layout/screen_connect_password.xml
@@ -46,7 +46,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/content_min_margin"
         android:gravity="start"
-        android:textSize="@dimen/text_medium"/>
+        android:textSize="@dimen/text_medium"
+        android:textColor="@color/red"/>
 
     <Button
         android:id="@+id/connect_password_button"
