--- a/app/res/layout/screen_connect_phone_verify.xml
+++ b/app/res/layout/screen_connect_phone_verify.xml
@@ -37,6 +37,7 @@
         android:layout_margin="@dimen/content_min_margin"
         android:gravity="start"
         android:textSize="@dimen/text_medium"
+        android:textColor="@color/red"
         android:visibility="gone"/>
 
     <TextView
