Initial work on main Connect screens and workflows. Configured project to use Android Navigation component. Created nav graph for Connect workflows. Created 5 of the Connect pages and built UIs (some work still to do).

--- a/app/res/values/dimens.xml
+++ b/app/res/values/dimens.xml
@@ -140,9 +140,10 @@
     <!--  Map Info View  -->
     <dimen name="map_info_view_text_size">12sp</dimen>
     <dimen name="map_info_view_text_padding">4dp</dimen>
-    
+
     <dimen name="dp40">40dp</dimen>
     <dimen name="dp6">6dp</dimen>
     <dimen name="dp60">60dp</dimen>
     <dimen name="dp48">48dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
