--- a/app/res/layout/fragment_connect_delivery_details.xml
+++ b/app/res/layout/fragment_connect_delivery_details.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
+        android:paddingBottom="20dp"
         android:background="@drawable/dots_rect_back">
 
         <TextView
@@ -28,46 +29,90 @@
             android:textSize="@dimen/text_large"
             />
 
+        <ImageView
+            android:id="@+id/connect_delivery_begin_icon"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            app:layout_constraintTop_toBottomOf="@id/connect_delivery_title"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="20dp"
+            android:src="@drawable/watch"
+            />
+
         <TextView
             android:id="@+id/connect_delivery_begin_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/connect_delivery_title"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toTopOf="@id/connect_delivery_begin_icon"
+            app:layout_constraintBottom_toBottomOf="@id/connect_delivery_begin_icon"
+            app:layout_constraintStart_toEndOf="@id/connect_delivery_begin_icon"
             android:layout_marginStart="20dp"
-            app:drawableStartCompat="@drawable/book" />
+            android:gravity="center"
+            />
+
+        <ImageView
+            android:id="@+id/connect_delivery_max_visits_icon"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            app:layout_constraintTop_toBottomOf="@id/connect_delivery_begin_icon"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="20dp"
+            android:src="@drawable/calendar_heart"
+            />
 
         <TextView
             android:id="@+id/connect_delivery_max_visits_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/connect_delivery_begin_text"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toTopOf="@id/connect_delivery_max_visits_icon"
+            app:layout_constraintBottom_toBottomOf="@id/connect_delivery_max_visits_icon"
+            app:layout_constraintStart_toEndOf="@id/connect_delivery_max_visits_icon"
             android:layout_marginStart="20dp"
-            app:drawableStartCompat="@drawable/book" />
+            />
+
+        <ImageView
+            android:id="@+id/connect_delivery_end_icon"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            app:layout_constraintTop_toBottomOf="@id/connect_delivery_max_visits_icon"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="20dp"
+            android:src="@drawable/watch"
+            />
 
         <TextView
             android:id="@+id/connect_delivery_end_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/connect_delivery_max_visits_text"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toTopOf="@id/connect_delivery_end_icon"
+            app:layout_constraintBottom_toBottomOf="@id/connect_delivery_end_icon"
+            app:layout_constraintStart_toEndOf="@id/connect_delivery_end_icon"
             android:layout_marginStart="20dp"
-            app:drawableStartCompat="@drawable/book" />
+            />
+
+        <ImageView
+            android:id="@+id/connect_delivery_max_daily_visits_icon"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            app:layout_constraintTop_toBottomOf="@id/connect_delivery_end_icon"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="20dp"
+            android:src="@drawable/money"
+            />
 
         <TextView
             android:id="@+id/connect_delivery_max_daily_visits_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/connect_delivery_end_text"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="10dp"
-            android:paddingBottom="10dp"
+            app:layout_constraintTop_toTopOf="@id/connect_delivery_max_daily_visits_icon"
+            app:layout_constraintBottom_toBottomOf="@id/connect_delivery_max_daily_visits_icon"
+            app:layout_constraintStart_toEndOf="@id/connect_delivery_max_daily_visits_icon"
             android:layout_marginStart="20dp"
-            app:drawableStartCompat="@drawable/book" />
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
