--- a/app/res/layout/fragment_connect_learning_progress.xml
+++ b/app/res/layout/fragment_connect_learning_progress.xml
@@ -21,12 +21,13 @@
             android:src="@drawable/book"/>
 
         <TextView
+            android:id="@+id/connect_learn_progress_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:paddingTop="2dp"
-            android:text="@string/connect_learn_progress_title"
+            android:paddingStart="10dp"
             android:textStyle="bold"
             android:textSize="@dimen/text_large" />
 
@@ -39,6 +40,8 @@
         app:layout_constraintTop_toBottomOf="@id/connect_learning_title_row"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
         android:textAlignment="center"/>
 
     <ImageView
@@ -51,6 +54,60 @@
         android:layout_marginTop="20dp"
         android:src="@drawable/dummy_progress" />
 
+    <LinearLayout
+        android:id="@+id/connect_learning_certificate_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/connect_learning_status_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:orientation="vertical"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/dots_rect_back"
+        android:layout_marginTop="20dp"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
+        >
+
+        <TextView
+            android:id="@+id/connect_learn_cert_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textColor="@color/solid_blue"
+            android:text="@string/connect_learn_certificate"
+            />
+
+        <TextView
+            android:id="@+id/connect_learn_cert_subject"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:textAlignment="center"
+            />
+
+        <TextView
+            android:id="@+id/connect_learn_cert_person"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            />
+
+        <TextView
+            android:id="@+id/connect_learn_cert_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:textAlignment="center"
+            />
+
+
+
+    </LinearLayout>
+
     <TextView
         android:id="@+id/connect_learning_complete_by_text"
         android:layout_width="wrap_content"
@@ -62,13 +119,27 @@
 
     <Button
         android:id="@+id/connect_learning_button"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/connect_learning_complete_by_text"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         />
+
+    <TextView
+        android:id="@+id/connect_learning_claim_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/connect_learning_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="10dp"
+        android:text="@string/connect_learn_claim_label"
+        android:textSize="@dimen/text_large"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
