--- a/app/res/layout/fragment_connect_progress_delivery.xml
+++ b/app/res/layout/fragment_connect_progress_delivery.xml
@@ -62,12 +62,14 @@
 
     <Button
         android:id="@+id/connect_progress_button"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/connect_progress_complete_by_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
