--- a/app/res/layout/fragment_connect_delivery_details.xml
+++ b/app/res/layout/fragment_connect_delivery_details.xml
@@ -27,6 +27,7 @@
             android:paddingTop="10dp"
             android:textStyle="bold"
             android:textSize="@dimen/text_large"
+            android:text="@string/connect_delivery_review_title"
             />
 
         <ImageView
@@ -124,7 +125,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="20dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:text="@string/connect_delivery_ready_to_claim"/>
 
     <TextView
         android:id="@+id/connect_delivery_action_details"
@@ -136,6 +138,7 @@
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:textAlignment="center"
+        android:text="@string/connect_delivery_ready_to_claim_detailed"
         />
 
     <Button
