--- a/app/res/layout/fragment_connect_progress_delivery.xml
+++ b/app/res/layout/fragment_connect_progress_delivery.xml
@@ -41,21 +41,44 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:textAlignment="center"/>
 
-    <ImageView
-        android:id="@+id/connect_progress_progress"
+    <ProgressBar
+        android:id="@+id/connect_progress_progress_bar"
         android:layout_width="240dp"
         android:layout_height="240dp"
         app:layout_constraintTop_toBottomOf="@id/connect_progress_status_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="20dp"
-        android:src="@drawable/dummy_progress" />
+        android:indeterminateOnly="false"
+        android:progressDrawable="@drawable/progress_ring"
+        android:rotation="-90"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/connect_progress_progress_bar"
+        app:layout_constraintBottom_toBottomOf="@id/connect_progress_progress_bar"
+        app:layout_constraintStart_toStartOf="@id/connect_progress_progress_bar"
+        app:layout_constraintEnd_toEndOf="@id/connect_progress_progress_bar"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/connect_progress_progress_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textSize="@dimen/text_larger"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/connect_learn_complete"/>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/connect_progress_complete_by_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/connect_progress_progress"
+        app:layout_constraintTop_toBottomOf="@id/connect_progress_progress_bar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="20dp"/>
