Set up Download fragment to download a commcare app and update progress accordingly

--- a/app/res/navigation/nav_graph_connect.xml
+++ b/app/res/navigation/nav_graph_connect.xml
@@ -84,6 +84,9 @@
         <argument
             android:name="appTitle"
             app:argType="string" />
+        <action
+            android:id="@+id/action_connect_downloading_fragment_to_connect_job_learning_progress_fragment"
+            app:destination="@id/connect_job_learning_progress_fragment" />
     </fragment>
 
 
