Several UI changes based on user feedback.

--- a/app/res/layout/fragment_connect_progress_delivery.xml
+++ b/app/res/layout/fragment_connect_progress_delivery.xml
@@ -93,6 +93,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
+        android:text="@string/connect_progress_launch"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
