--- a/app/res/layout/connect_available_job_item.xml
+++ b/app/res/layout/connect_available_job_item.xml
@@ -45,6 +45,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        app:layout_constrainedWidth="true" />
+
+    <TextView
+        android:id="@+id/visits_label"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/button"
+        app:layout_constraintTop_toBottomOf="@id/description_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
         android:paddingBottom="20dp"
         app:layout_constrainedWidth="true" />
 
