--- a/app/res/layout/fragment_connect_delivery_details.xml
+++ b/app/res/layout/fragment_connect_delivery_details.xml
@@ -31,32 +31,10 @@
             />
 
         <ImageView
-            android:id="@+id/connect_delivery_begin_icon"
+            android:id="@+id/connect_delivery_visits_icon"
             android:layout_width="32dp"
             android:layout_height="32dp"
             app:layout_constraintTop_toBottomOf="@id/connect_delivery_title"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="20dp"
-            android:src="@drawable/watch"
-            />
-
-        <TextView
-            android:id="@+id/connect_delivery_begin_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/connect_delivery_begin_icon"
-            app:layout_constraintBottom_toBottomOf="@id/connect_delivery_begin_icon"
-            app:layout_constraintStart_toEndOf="@id/connect_delivery_begin_icon"
-            android:layout_marginStart="20dp"
-            android:gravity="center"
-            />
-
-        <ImageView
-            android:id="@+id/connect_delivery_max_visits_icon"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            app:layout_constraintTop_toBottomOf="@id/connect_delivery_begin_icon"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="20dp"
             android:layout_marginStart="20dp"
@@ -64,20 +42,21 @@
             />
 
         <TextView
-            android:id="@+id/connect_delivery_max_visits_text"
+            android:id="@+id/connect_delivery_total_visits_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/connect_delivery_max_visits_icon"
-            app:layout_constraintBottom_toBottomOf="@id/connect_delivery_max_visits_icon"
-            app:layout_constraintStart_toEndOf="@id/connect_delivery_max_visits_icon"
+            app:layout_constraintTop_toTopOf="@id/connect_delivery_visits_icon"
+            app:layout_constraintBottom_toBottomOf="@id/connect_delivery_visits_icon"
+            app:layout_constraintStart_toEndOf="@id/connect_delivery_visits_icon"
             android:layout_marginStart="20dp"
+            android:gravity="center"
             />
 
         <ImageView
-            android:id="@+id/connect_delivery_end_icon"
+            android:id="@+id/connect_delivery_remaining_icon"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            app:layout_constraintTop_toBottomOf="@id/connect_delivery_max_visits_icon"
+            app:layout_constraintTop_toBottomOf="@id/connect_delivery_visits_icon"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="20dp"
             android:layout_marginStart="20dp"
@@ -85,20 +64,41 @@
             />
 
         <TextView
-            android:id="@+id/connect_delivery_end_text"
+            android:id="@+id/connect_delivery_remaining_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/connect_delivery_end_icon"
-            app:layout_constraintBottom_toBottomOf="@id/connect_delivery_end_icon"
-            app:layout_constraintStart_toEndOf="@id/connect_delivery_end_icon"
+            app:layout_constraintTop_toTopOf="@id/connect_delivery_remaining_icon"
+            app:layout_constraintBottom_toBottomOf="@id/connect_delivery_remaining_icon"
+            app:layout_constraintStart_toEndOf="@id/connect_delivery_remaining_icon"
             android:layout_marginStart="20dp"
             />
 
         <ImageView
-            android:id="@+id/connect_delivery_max_daily_visits_icon"
+            android:id="@+id/connect_delivery_max_daily_icon"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            app:layout_constraintTop_toBottomOf="@id/connect_delivery_end_icon"
+            app:layout_constraintTop_toBottomOf="@id/connect_delivery_remaining_icon"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="20dp"
+            android:src="@drawable/calendar_heart"
+            />
+
+        <TextView
+            android:id="@+id/connect_delivery_max_daily_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/connect_delivery_max_daily_icon"
+            app:layout_constraintBottom_toBottomOf="@id/connect_delivery_max_daily_icon"
+            app:layout_constraintStart_toEndOf="@id/connect_delivery_max_daily_icon"
+            android:layout_marginStart="20dp"
+            />
+
+        <ImageView
+            android:id="@+id/connect_delivery_budget_icon"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            app:layout_constraintTop_toBottomOf="@id/connect_delivery_max_daily_icon"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="20dp"
             android:layout_marginStart="20dp"
@@ -106,12 +106,12 @@
             />
 
         <TextView
-            android:id="@+id/connect_delivery_max_daily_visits_text"
+            android:id="@+id/connect_delivery_budget_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/connect_delivery_max_daily_visits_icon"
-            app:layout_constraintBottom_toBottomOf="@id/connect_delivery_max_daily_visits_icon"
-            app:layout_constraintStart_toEndOf="@id/connect_delivery_max_daily_visits_icon"
+            app:layout_constraintTop_toTopOf="@id/connect_delivery_budget_icon"
+            app:layout_constraintBottom_toBottomOf="@id/connect_delivery_budget_icon"
+            app:layout_constraintStart_toEndOf="@id/connect_delivery_budget_icon"
             android:layout_marginStart="20dp"
             />
 
@@ -138,7 +138,6 @@
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:textAlignment="center"
-        android:text="@string/connect_delivery_ready_to_claim_detailed"
         />
 
     <Button
