Phone input: separated '+' out of country code input, restricting input to only 0-9.

--- a/app/res/layout/screen_connect_primary_phone.xml
+++ b/app/res/layout/screen_connect_primary_phone.xml
@@ -29,12 +29,18 @@
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8sp"
+            android:text="@string/phone_code_plus" />
         <AutoCompleteTextView
             android:id="@+id/connect_primary_phone_country_input"
             android:layout_width="100sp"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:inputType="text" />
+            android:inputType="numberDecimal"
+            android:digits="1234567890"
+            android:gravity="center" />
 
         <AutoCompleteTextView
             android:id="@+id/connect_primary_phone_input"
@@ -42,6 +48,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
+            android:digits="1234567890"
             android:focusable="true"
             android:focusableInTouchMode="true">
             <requestFocus />
