--- a/app/res/layout/fragment_connect_downloading.xml
+++ b/app/res/layout/fragment_connect_downloading.xml
@@ -47,6 +47,7 @@
         app:layout_constraintTop_toBottomOf="@id/connect_downloading_progress"
         android:layout_marginTop="20dp"
         android:textColor="@color/white"
+        android:visibility="invisible"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
