--- a/app/res/layout/fragment_connect_job_intro.xml
+++ b/app/res/layout/fragment_connect_job_intro.xml
@@ -62,8 +62,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:text="@string/connect_job_download_learn_app"/>
+        android:layout_marginEnd="20dp"/>
 
     <TextView
         android:id="@+id/connect_job_intro_learning_summary"
