--- a/app/res/layout/fragment_connect_learning_progress.xml
+++ b/app/res/layout/fragment_connect_learning_progress.xml
@@ -74,6 +74,7 @@
         android:rotation="-90"/>
 
     <LinearLayout
+        android:id="@+id/connect_learn_progress_bar_text_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="@id/connect_learning_progress_bar"
