--- a/app/res/navigation/nav_graph_connect.xml
+++ b/app/res/navigation/nav_graph_connect.xml
@@ -50,6 +50,9 @@
         <argument
             android:name="job"
             app:argType="org.commcare.android.database.connect.models.ConnectJobRecord" />
+        <action
+            android:id="@+id/action_connect_job_learning_progress_fragment_to_connect_job_delivery_details_fragment"
+            app:destination="@id/connect_job_delivery_details_fragment" />
     </fragment>
 
     <fragment
@@ -83,6 +86,9 @@
         <argument
             android:name="title"
             app:argType="string" />
+        <argument
+            android:name="learning"
+            app:argType="boolean" />
         <argument
             android:name="job"
             app:argType="org.commcare.android.database.connect.models.ConnectJobRecord" />
