Added code for claiming job and proceeding to delivery progress page

--- a/app/res/navigation/nav_graph_connect.xml
+++ b/app/res/navigation/nav_graph_connect.xml
@@ -66,6 +66,9 @@
         <action
             android:id="@+id/action_connect_job_delivery_details_fragment_to_connect_downloading_fragment"
             app:destination="@id/connect_downloading_fragment" />
+        <action
+            android:id="@+id/action_connect_job_delivery_details_fragment_to_connect_job_delivery_progress_fragment"
+            app:destination="@id/connect_job_delivery_progress_fragment" />
     </fragment>
 
     <fragment
@@ -95,6 +98,9 @@
         <action
             android:id="@+id/action_connect_downloading_fragment_to_connect_job_learning_progress_fragment"
             app:destination="@id/connect_job_learning_progress_fragment" />
+        <action
+            android:id="@+id/action_connect_downloading_fragment_to_connect_job_delivery_progress_fragment"
+            app:destination="@id/connect_job_delivery_progress_fragment" />
     </fragment>
 
 
