--- a/app/res/layout/fragment_connect_delivery_progress.xml
+++ b/app/res/layout/fragment_connect_delivery_progress.xml
@@ -4,11 +4,29 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <ImageView
+        android:id="@+id/connect_delivery_refresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/ic_update_nav_drawer"
+        android:contentDescription="@string/refresh" />
+
+    <TextView
+        android:id="@+id/connect_delivery_last_update"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="3dp"
+        app:layout_constraintEnd_toStartOf="@id/connect_delivery_refresh"
+        />
+
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/connect_delivery_progress_tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/connect_delivery_refresh"
         android:background="@color/solid_blue"
         app:tabTextColor="@color/white" />
 
