Parsing and storing deliveries in DB. Added DB table for payments. Parsing and storing payments in DB. Some small UI improvements.

--- a/app/res/navigation/nav_graph_connect.xml
+++ b/app/res/navigation/nav_graph_connect.xml
@@ -39,7 +39,8 @@
             app:destination="@id/connect_downloading_fragment" />
         <action
             android:id="@+id/action_connect_job_intro_fragment_to_connect_job_learning_progress_fragment"
-            app:destination="@id/connect_job_learning_progress_fragment" />
+            app:destination="@id/connect_job_learning_progress_fragment"
+            app:popUpTo="@id/connect_jobs_list_fragment"/>
     </fragment>
 
     <fragment
@@ -52,7 +53,8 @@
             app:argType="org.commcare.android.database.connect.models.ConnectJobRecord" />
         <action
             android:id="@+id/action_connect_job_learning_progress_fragment_to_connect_job_delivery_details_fragment"
-            app:destination="@id/connect_job_delivery_details_fragment" />
+            app:destination="@id/connect_job_delivery_details_fragment"
+            app:popUpTo="@id/connect_jobs_list_fragment"/>
     </fragment>
 
     <fragment
@@ -68,7 +70,8 @@
             app:destination="@id/connect_downloading_fragment" />
         <action
             android:id="@+id/action_connect_job_delivery_details_fragment_to_connect_job_delivery_progress_fragment"
-            app:destination="@id/connect_job_delivery_progress_fragment" />
+            app:destination="@id/connect_job_delivery_progress_fragment"
+            app:popUpTo="@id/connect_jobs_list_fragment"/>
     </fragment>
 
     <fragment
@@ -97,10 +100,12 @@
             app:argType="org.commcare.android.database.connect.models.ConnectJobRecord" />
         <action
             android:id="@+id/action_connect_downloading_fragment_to_connect_job_learning_progress_fragment"
-            app:destination="@id/connect_job_learning_progress_fragment" />
+            app:destination="@id/connect_job_learning_progress_fragment"
+            app:popUpTo="@id/connect_jobs_list_fragment"/>
         <action
             android:id="@+id/action_connect_downloading_fragment_to_connect_job_delivery_progress_fragment"
-            app:destination="@id/connect_job_delivery_progress_fragment" />
+            app:destination="@id/connect_job_delivery_progress_fragment"
+            app:popUpTo="@id/connect_jobs_list_fragment"/>
     </fragment>
 
 
