Fixed some string overlaps in the jobs list.

--- a/app/res/layout/connect_available_job_item.xml
+++ b/app/res/layout/connect_available_job_item.xml
@@ -30,11 +30,14 @@
     <TextView
         android:id="@+id/title_label"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_marginStart="20dp"
         android:textStyle="bold"
         android:textSize="@dimen/text_large"
+        android:textAlignment="textStart"
+        app:layout_constrainedWidth="true"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/button"
         app:layout_constraintTop_toBottomOf="@id/new_label" />
 
     <TextView
@@ -42,9 +45,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/button"
         app:layout_constraintTop_toBottomOf="@id/title_label"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:textAlignment="textStart"
         app:layout_constrainedWidth="true" />
 
     <TextView
@@ -52,10 +56,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/button"
         app:layout_constraintTop_toBottomOf="@id/description_label"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:paddingBottom="20dp"
+        android:textAlignment="textStart"
         app:layout_constrainedWidth="true" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
