Downloading learn/deliver app if necessary anytime about to enter the app.

--- a/app/res/navigation/nav_graph_connect.xml
+++ b/app/res/navigation/nav_graph_connect.xml
@@ -55,6 +55,9 @@
             android:id="@+id/action_connect_job_learning_progress_fragment_to_connect_job_delivery_details_fragment"
             app:destination="@id/connect_job_delivery_details_fragment"
             app:popUpTo="@id/connect_jobs_list_fragment"/>
+        <action
+            android:id="@+id/action_connect_job_learning_progress_fragment_to_connect_downloading_fragment"
+            app:destination="@id/connect_downloading_fragment" />
     </fragment>
 
     <fragment
@@ -82,6 +85,9 @@
         <argument
             android:name="job"
             app:argType="org.commcare.android.database.connect.models.ConnectJobRecord" />
+        <action
+            android:id="@+id/action_connect_job_delivery_progress_fragment_to_connect_downloading_fragment"
+            app:destination="@id/connect_downloading_fragment" />
     </fragment>
 
     <fragment
