Fixed some navigation pops. Not launching LoginActivity again from DispatchActivity after user logs out of Connect-managed app. Properly navigating all the way back to login when user chooses to logout from Conncet-managed app. Fixed bug that was checking to see if delivery app was installed instead of learn app.

--- a/app/res/navigation/nav_graph_connect.xml
+++ b/app/res/navigation/nav_graph_connect.xml
@@ -36,7 +36,8 @@
             app:argType="org.commcare.android.database.connect.models.ConnectJobRecord" />
         <action
             android:id="@+id/action_connect_job_intro_fragment_to_connect_downloading_fragment"
-            app:destination="@id/connect_downloading_fragment" />
+            app:destination="@id/connect_downloading_fragment"
+            app:popUpTo="@id/connect_jobs_list_fragment"/>
         <action
             android:id="@+id/action_connect_job_intro_fragment_to_connect_job_learning_progress_fragment"
             app:destination="@id/connect_job_learning_progress_fragment"
@@ -57,7 +58,12 @@
             app:popUpTo="@id/connect_jobs_list_fragment"/>
         <action
             android:id="@+id/action_connect_job_learning_progress_fragment_to_connect_downloading_fragment"
-            app:destination="@id/connect_downloading_fragment" />
+            app:destination="@id/connect_downloading_fragment"
+            app:popUpTo="@id/connect_jobs_list_fragment"/>
+        <action
+            android:id="@+id/action_connect_job_learning_progress_fragment_to_connect_jobs_list_fragment"
+            app:popUpTo="@id/connect_jobs_list_fragment"
+            app:popUpToInclusive="true"/>
     </fragment>
 
     <fragment
@@ -70,7 +76,8 @@
             app:argType="org.commcare.android.database.connect.models.ConnectJobRecord" />
         <action
             android:id="@+id/action_connect_job_delivery_details_fragment_to_connect_downloading_fragment"
-            app:destination="@id/connect_downloading_fragment" />
+            app:destination="@id/connect_downloading_fragment"
+            app:popUpTo="@id/connect_jobs_list_fragment"/>
         <action
             android:id="@+id/action_connect_job_delivery_details_fragment_to_connect_job_delivery_progress_fragment"
             app:destination="@id/connect_job_delivery_progress_fragment"
@@ -87,7 +94,8 @@
             app:argType="org.commcare.android.database.connect.models.ConnectJobRecord" />
         <action
             android:id="@+id/action_connect_job_delivery_progress_fragment_to_connect_downloading_fragment"
-            app:destination="@id/connect_downloading_fragment" />
+            app:destination="@id/connect_downloading_fragment"
+            app:popUpTo="@id/connect_jobs_list_fragment" />
     </fragment>
 
     <fragment
