Fixed when login page shows/hides some input (i.e. the "or" label). Fixed a button width on learning progress page.

--- a/app/res/layout/fragment_connect_learning_progress.xml
+++ b/app/res/layout/fragment_connect_learning_progress.xml
@@ -182,7 +182,7 @@
 
     <Button
         android:id="@+id/connect_learning_button"
-        android:layout_width="240dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/connect_learning_claim_label"
         app:layout_constraintStart_toStartOf="parent"
