--- a/app/res/layout/screen_login.xml
+++ b/app/res/layout/screen_login.xml
@@ -100,8 +100,7 @@
                                 android:layout_margin="@dimen/content_min_margin"
                                 android:textColor="@color/cc_neutral_color"
                                 android:textSize="@dimen/text_medium"
-                                android:text="@string/choice_or"
-                                android:visibility="gone"/>
+                                android:text="@string/choice_or" />
 
                             <Spinner
                                 android:id="@+id/app_selection_spinner"
