--- a/app/res/layout/fragment_connect_job_intro.xml
+++ b/app/res/layout/fragment_connect_job_intro.xml
@@ -54,50 +54,43 @@
         android:text="@string/connect_job_you_will_learn"
         android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/connect_job_intro_start_button"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/connect_job_intro_learning"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/connect_job_intro_learning_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"/>
 
     <TextView
-        android:id="@+id/connect_job_intro_learning_summary"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/connect_job_intro_start_button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <TextView
         android:id="@+id/connect_job_intro_start_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/connect_job_intro_learning_summary"
+        app:layout_constraintTop_toBottomOf="@id/connect_job_intro_learning"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="30dp"
         android:textStyle="bold"
         android:text="@string/connect_job_start_training"/>
 
-    <ScrollView
+    <TextView
+        android:id="@+id/connect_job_intro_learning_summary"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/connect_job_intro_learning_title"
-        app:layout_constraintBottom_toTopOf="@id/connect_job_intro_start_label"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/connect_job_intro_start_label"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/connect_job_intro_start_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/connect_job_intro_learning_summary"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp">
-
-        <TextView
-            android:id="@+id/connect_job_intro_learning"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"/>
-
-    </ScrollView>
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
