--- a/app/res/layout/fragment_connect_results_list.xml
+++ b/app/res/layout/fragment_connect_results_list.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/verification_list"
+        android:id="@+id/results_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintStart_toStartOf="parent"
